executable('vavpp', [ 'vavpp.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppblending', [ 'vppblending.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppchromasitting', [ 'vppchromasitting.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppdenoise', [ 'vppdenoise.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppscaling_csc', [ 'vppscaling_csc.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppscaling_n_out_usrptr', [ 'vppscaling_n_out_usrptr.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppsharpness', [ 'vppsharpness.cpp' ],
           dependencies: libva_display_dep,
           install: true)
