executable('vacopy', [ 'vacopy.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vavpp', [ 'vavpp.cpp' ],
           dependencies: libva_display_dep,
           install: true)
if libva_dep.version().version_compare('>= 1.12.0')
    executable('vpp3dlut', [ 'vpp3dlut.cpp' ],
            dependencies: libva_display_dep,
            install: true)
endif
executable('vppblending', [ 'vppblending.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppchromasitting', [ 'vppchromasitting.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppdenoise', [ 'vppdenoise.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vpphdr_tm', [ 'vpphdr_tm.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppscaling_csc', [ 'vppscaling_csc.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppscaling_n_out_usrptr', [ 'vppscaling_n_out_usrptr.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('vppsharpness', [ 'vppsharpness.cpp' ],
           dependencies: libva_display_dep,
           install: true)
